# amisgitpm

./: .kateconfig  Cargo.toml  README.md  build.rs  code_of_conduct.md
agpm/: Cargo.toml  README.md  build.rs
agpm/db/suggestions/: cargo.json
agpm/src/: args.rs  lib.rs  main.rs
agpm_abstract/: Cargo.toml
agpm_abstract/src/: dirs.rs  interactions.rs  lib.rs  pm.rs  project.rs
agpm_abstract/src/package_manager/: base.rs  extended.rs  inter.rs  mod.rs  operations.rs
agpm_dirs/: Cargo.toml  README.md
agpm_dirs/src/: lib.rs
agpm_glue/: Cargo.toml
agpm_glue/src/: lib.rs
agpm_interactions/: Cargo.toml  README.md  build.rs
agpm_interactions/src/: error.rs  lib.rs  suggestions.rs
agpm_lib/: Cargo.toml
agpm_lib/src/: lib.rs
agpm_pm/: Cargo.toml  README.md
agpm_pm/src/: base.rs  error.rs  extended.rs  inter.rs  interactions.rs  lib.rs  operations.rs
agpm_pm_impl/: Cargo.toml
agpm_pm_impl/src/: inter.rs  lib.rs  operations.rs
agpm_project/: Cargo.toml  README.md
agpm_project/src/: lib.rs
agpm_store/: Cargo.toml  README.md
agpm_store/src/: error.rs  lib.rs
agpm_suggestions/: Cargo.toml  README.md  build.rs
agpm_suggestions/src/: error.rs  lib.rs  origins.rs
agpm_suggestions/suggestions/: meson.json
amisgitpm/: Cargo.toml  README.md
amisgitpm/src/: dirs.rs  lib.rs  pm.rs  project.rs
amisgitpm_types_traits/: Cargo.toml
amisgitpm_types_traits/src/: dirs.rs  interactions.rs  project.rs  suggestions.rs
amisgitpm_types_traits/src/package_manager/: base.rs  extended.rs  inter.rs  mod.rs  operations.rs
db/build_aux/: bash.json  cargo.json  cmain.json  makefile.json  meson.json
db/suggestions/: bash.json  cmain.json  cmake.json  makefile.json
src/: lib.rs  main.rs
src/args/: mod.rs
src/build_suggestions/: db_suggestions.rs  error.rs  mdown.rs  mod.rs  suggestions_error.rs
src/db-manager/: mod.rs
src/dbmanager/: actual_tables.rs  aux.rs  mod.rs  table_error.rs
src/dbs/: build_aux.rs  mod.rs  project.rs
src/dirutils/: consts.rs  mod.rs
src/gitutils/: gitutil_error.rs  mod.rs
src/interaction/: error.rs  install.rs  interact_error.rs  minor.rs  mod.rs  update.rs
src/package_management/: .pm_ext.rs.kate-swp  core.rs  err_consts.rs  error.rs  ext.rs  inter.rs  mod.rs  pm.rs  pm_atomic.rs  pm_base.rs  pm_core.rs  pm_core_err.rs  pm_error.rs  pm_ext.rs  pm_ext_err.rs  pm_inter.rs  pm_inter_err.rs
src/projects/: error.rs  mod.rs
src/suggestions/: db_suggestions.rs  mdown.rs  mod.rs  suggestions_error.rs
src/utils/: mod.rs
test_sandbox/: .crates2.json
tests/: Cargo.toml  integration_tests.rs  test.rs
tests/db/append/: cargo.json  cmain.json  meson.json
tests/db/bad_json/: bad.json
tests/db/mixed_json/: cargo.json
tests/db/proj/: example_1.json
tests/db/three_elems/: cmain.json  meson.json
tests/mdowns/: README.md  Shortwave.md
tests/projects/: .gitignore
tests/projects/git_upd/: 0_start.sh  1_update.sh  2_finish.sh  dates.txt
tests/projects/meson_project/: Makefile  main.c  meson.build
tests/projects/mess_project/: Makefile  aux.c  aux.h  main.c  meson.build
