[package]
name = "amisgitpm"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/david-soto-m/"
categories = ["command-line-interface", "filesystem", "development-tools", "config"]
keywords = ["Git", "Package management", "building", "testing", "development"]
description = "A package manager for git repos"

[workspace]
members = [
    "agpm_abstract",
    "agpm_pm",
    "agpm_dirs",
    "agpm_store",
    "agpm_interactions",
    "agpm_suggestions"
]


[dependencies]
# UI
clap = { version = "^4", features = ["derive"] } # arguments

# Utils
agpm_abstract = {path = "agpm_abstract", features = ["serde"] }
agpm_pm = {path = "agpm_pm"}
agpm_dirs = {path = "agpm_dirs"}
agpm_store = {path = "agpm_store"}
agpm_suggestions = {path = "agpm_suggestions"}
agpm_interactions = {path = "agpm_interactions"}


[build-dependencies]
directories = "^4.0" # config and local and stuff
