[package]
name = "amisgitpm"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
repository = "https://github.com/david-soto-m/"
categories = ["command-line-interface", "filesystem", "development-tools", "config"]
keywords = ["Git", "Package management", "building", "testing", "development"]
description = "A package manager for git repos"

[workspace]
members = [
    "agpm_abstract",
    "agpm_pm",
    "agpm_dirs",
    "agpm_store",
    "agpm_interactions",
    "agpm_suggestions",
    "agpm_glue",
    "agpm"
]


[dependencies]

[build-dependencies]
directories = "^4.0" # config and local and stuff
