[workspace]
members = [
    "agpm_abstract",
    "agpm_pm",
    "agpm_dirs",
    "agpm_store",
    "agpm_interactions",
    "agpm_suggestions",
    "agpm_glue",
    "agpm"
]
[workspace.package]
license = "Unlicense OR CC0-1.0 OR MIT"
repository = "https://github.com/david-soto-m/"
categories = ["command-line-interface", "filesystem", "development-tools", "config"]
keywords = ["Git", "Package management", "building", "testing", "development"]
