[package]
name = "agpm"
version = "0.0.1"
edition = "2021"
description = "A command line interface to a amisgitpm project manager"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4", features = ["derive"] } # arguments
color-eyre = { version = "^0.6.2", default-features = false}
amisgitpm = {path = "../amisgitpm"}
agpm_project = {path = "../agpm_project"}
agpm_dirs = {path = "../agpm_dirs", features=["suggestions"]}
agpm_interactions = {path = "../agpm_interactions", features=["suggestions"]}
agpm_suggestions = {path = "../agpm_suggestions"}
agpm_pm = {path = "../agpm_pm"}
agpm_store = {path = "../agpm_store"}
