[package]
name = "agpm"
version = "0.0.1"
edition = "2021"
description = "A command line interface to a amisgitpm project manager"
license.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4", features = ["derive"] } # arguments
color-eyre = { version = "^0.6.2", default-features = false}
amisgitpm = {version ="^0.0", path = "../amisgitpm"}
agpm_project = {version ="^0.0", path = "../agpm_project"}
agpm_dirs = {version ="^0.0", path = "../agpm_dirs", features=["suggestions"]}
agpm_interactions = {version ="^0.0", path = "../agpm_interactions", features=["suggestions"]}
agpm_suggestions = {version ="^0.0", path = "../agpm_suggestions"}
agpm_pm = {version ="^0.0", path = "../agpm_pm"}
agpm_store = {version ="^0.0", path = "../agpm_store"}
