[package]
name = "agpm_dirs"
version = "0.0.1"
edition = "2021"
description= "An implementor for the amisgitpm Directories trait"
license.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amisgitpm = {version ="^0.0", path = "../amisgitpm"}
directories = "^4.0" # config and local and stuff
thiserror = "^1.0"
agpm_suggestions = {version ="^0.0", path = "../agpm_suggestions", optional=true}


[features]
suggestions = ["agpm_suggestions"]
