[package]
name = "agpm_project"
version = "0.0.1"
edition = "2021"
description = "An implementor of the ProjectIface trait from amisgitpm"
license.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "^1.0", features = ["derive"], optional = true}
amisgitpm = {path = "../amisgitpm"}

[features]
serde = ["dep:serde"]
