[package]
name = "agpm_store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agpm_abstract = {path = "../agpm_abstract", features = ["serde"] }
thiserror = "^1.0"
json_tables = "^0.0" # table management
