[package]
name = "agpm_suggestions"
version = "0.0.1"
edition = "2021"
description = "A way to provide suggestions for building projects"
license.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amisgitpm = {version ="^0.0", path = "../amisgitpm"}
glob = "^0.3"
regex = "^1.6"
markdown-extract = "^2.0"
json_tables = "^0.0"
thiserror = "^1.0"
serde = {version = "^1.0", features = ["derive"]}
reqwest = { version = "0.11.13", features = ["blocking", "json"] }

