[package]
name = "amisgitpm"
version = "0.0.1"
edition = "2021"
description = "A collection of traits for creating a project manager"
license.workspace = true
repository.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "^0.15"
