[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
agpm_abstract = {path = "../agpm_abstract", features = ["serde"] }
agpm_pm = {path = "../agpm_pm"}
agpm_dirs = {path = "../agpm_dirs"}
agpm_store = {path = "../agpm_store"}
thiserror = "^1.0"



[[test]]
name = "test"
path = "test.rs"
