[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false

[dev-dependencies]
amisgitpm = {path = "../amisgitpm"}
agpm_project = {path = "../agpm_project"}
agpm_interactions = {path = "../agpm_interactions"}
agpm_pm = {path = "../agpm_pm"}
agpm_suggestions = {path = "../agpm_suggestions"}
agpm_store = {path = "../agpm_store"}
thiserror = "^1.0"
directories = "^4.0" # config and local and stuff
subprocess = "^0.2"



[[test]]
name = "test"
path = "test.rs"
